link powerline10k theme into oh-my-zsh

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,7 @@
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
+	ignore = untracked
+[submodule "zsh-themes/powerlevel10k"]
+	path = zsh-themes/powerlevel10k
+	url = https://github.com/romkatv/powerlevel10k.git
