--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,3 +16,4 @@
     ~/.oh-my-zsh: .oh-my-zsh
     ~/.config/nvim: .config/nvim
     ~/.config/leftwm: .config/leftwm
+    ~/.dot-files/.oh-my-zsh/themes/powerlevel10k: zsh-themes/powerlevel10k
