rename all instances of .dot-files to .dotfiles

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,5 +17,5 @@
     ~/.oh-my-zsh: .oh-my-zsh
     ~/.config/nvim: .config/nvim
     ~/.config/leftwm: .config/leftwm
-    ~/.dot-files/.oh-my-zsh/themes/powerlevel10k: zsh-themes/powerlevel10k
-    ~/.dot-files/.oh-my-zsh/plugins/zsh-syntax-highlighting: zsh-plugins/zsh-syntax-highlighting
+    ~/.dotfiles/.oh-my-zsh/themes/powerlevel10k: zsh-themes/powerlevel10k
+    ~/.dotfiles/.oh-my-zsh/plugins/zsh-syntax-highlighting: zsh-plugins/zsh-syntax-highlighting
