--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
     ~/.zshrc: .zshrc
     ~/.bashrc: .bashrc
     ~/.fonts: .fonts
+    ~/.fzf: fzf
     ~/.oh-my-zsh: .oh-my-zsh
     ~/.config/nvim: .config/nvim
     ~/.config/leftwm: .config/leftwm
