--- a/.tmux.conf
+++ b/.tmux.conf
@@ -104,6 +104,21 @@ set-window-option -g clock-mode-style 24
 #bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel “reattach-to-user-namespace pbcopy”
 #if -b "command -v reattach-to-user-namespace > /dev/null 2>&1" \
     "run 'tmux set -g default-command \"exec $(tmux show -gv default-shell) 2>/dev/null & reattach-to-user-namespace -l $(tmux show -gv default-shell)\"'"
+# Turn on window titles
+set -g set-titles on
+
+# Set window title string
+#  #H  Hostname of local host
+#  #I  Current window index
+#  #P  Current pane index
+#  #S  Session name
+#  #T  Current window title
+#  #W  Current window name
+#  #   A literal ‘#’
+set -g set-titles-string '#S:#I.#P #W'
+
+# Automatically set window title
+setw -g automatic-rename
 
 bind r source-file ~/.tmux.conf
 #source ~/share/git/powerline/powerline/bindings/tmux/powerline.conf
