--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,13 @@ bind-key a send-prefix
 bind-key C-a last-window
 
 #bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
+#bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+bind -T copy-mode-vi C-j send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 
 # window numbers start at 1
 set -g base-index 1
@@ -17,7 +23,7 @@ set -g base-index 1
 # dont wait for escape sequence (speedy up commands)
 set-option -g escape-time 5
 
-#setw -g aggressive-resize on
+set -g aggressive-resize on
 set -g lock-after-time 1800
 
 setw -g remain-on-exit off
